[gd_scene load_steps=13 format=3 uid="uid://dkkkwfmyfmghq"]

[ext_resource type="Script" path="res://GameObjects/Scripts/EnemyController.gd" id="1_lkvfn"]
[ext_resource type="Texture2D" uid="uid://c4cctugo41ww8" path="res://art/daddel_crab3.png" id="2_sjr2p"]
[ext_resource type="Texture2D" uid="uid://d27wnr6xclf1j" path="res://art/Normal Maps/DaddelCrab_Norm.png" id="3_41ojg"]
[ext_resource type="Script" path="res://GameObjects/Scripts/Mortality.gd" id="4_gfvvv"]

[sub_resource type="CanvasTexture" id="CanvasTexture_y612g"]
diffuse_texture = ExtResource("2_sjr2p")
normal_texture = ExtResource("3_41ojg")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_1b3q4"]
cull_mode = 1
polygon = PackedVector2Array(-196, -41.9991, -191, -31.9991, -186, -16.9991, -171, -1.99922, -151, 3.00069, -121, 13.0006, -80.9999, 13.0004, -45.9999, 8.00022, -16, -1.99991, 3.99994, -12, 8.99985, -32, 13.9998, -47, 18.9998, -32.0001, 23.9999, -12.0001, 29, 7.99989, 34, -2.00013, 33.9999, -22.0001, 33.9999, -32.0001, 33.9998, -57.0001, 28.9997, -72.0001, 38.9998, -52.0001, 38.9999, -32.0002, 43.9999, -17.0002, 48.9999, -12.0002, 48.9999, -32.0002, 53.9998, -57.0002, 43.9997, -72.0002, 38.9996, -87.0002, 23.9996, -97.0001, 13.9996, -97, 13.9995, -107, 13.9995, -117, -1.00055, -122, -11.0005, -127, -11.0006, -137, -21.0006, -137, -26.0006, -137, -26.0006, -147, -41.0006, -147, -51.0006, -142, -51.0007, -157, -56.0007, -162, -61.0007, -157, -71.0006, -152, -76.0006, -152, -76.0007, -162, -81.0007, -162, -86.0007, -167, -91.0007, -162, -101.001, -157, -106.001, -146.999, -111.001, -141.999, -121.001, -146.999, -131.001, -156.999, -136.001, -161.999, -141.001, -156.999, -151.001, -141.999, -151.001, -136.999, -156.001, -136.999, -166.001, -141.999, -171.001, -136.999, -176.001, -131.999, -181.001, -131.999, -186.001, -131.999, -191.001, -126.999, -186, -116.999, -196, -111.999, -201, -91.9991, -211, -91.999, -221, -86.999, -226, -76.999, -231, -61.9989, -236, -46.9989, -231, -31.9989, -231, -16.999, -226, -11.999, -226, -26.999, -221, -41.999, -211, -61.999, -216, -71.999, -206, -71.9991, -206, -66.9991, -216, -51.999, -221, -31.999, -221, -16.999, -216, 3.00098, -211, 8.00096, -206, -6.99906, -206, -26.9991, -201, -36.9991, -196, -46.9991)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_7xp6a"]
points = PackedVector2Array(-3.29, 82.35, 138.955, -82.735, -167.82, -84.56)

[sub_resource type="Gradient" id="Gradient_jbv6s"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a6a2u"]
gradient = SubResource("Gradient_jbv6s")

[sub_resource type="CanvasTexture" id="CanvasTexture_1ow8i"]
diffuse_texture = SubResource("GradientTexture1D_a6a2u")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4a6nf"]
size = Vector2(25.175, 7.3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dawp4"]
size = Vector2(25, 12)

[node name="DaddelCrab" type="CharacterBody2D"]
position = Vector2(0, -1)
collision_layer = 2
collision_mask = 14
script = ExtResource("1_lkvfn")
metadata/Speed = 30.0
metadata/Track_Player = false
metadata/Jump_Range = 59.0
metadata/Jump_Velocity = 0.0

[node name="Enemy_Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.08, 0.08)
texture = SubResource("CanvasTexture_y612g")
region_enabled = true
region_rect = Rect2(158, 0, 289.768, 600)

[node name="LightOccluder2D" type="LightOccluder2D" parent="Enemy_Sprite"]
show_behind_parent = true
position = Vector2(91, -3)
occluder = SubResource("OccluderPolygon2D_1b3q4")

[node name="ShapeCast2D" type="ShapeCast2D" parent="Enemy_Sprite"]
visible = false
position = Vector2(-60, -80)
shape = SubResource("ConvexPolygonShape2D_7xp6a")
target_position = Vector2(135, -0.000617981)
collision_mask = 7

[node name="RayCast2D" type="RayCast2D" parent="Enemy_Sprite"]
position = Vector2(135, -70)
target_position = Vector2(0.001, 900)
collision_mask = 7

[node name="Line2D" type="Line2D" parent="Enemy_Sprite"]
position = Vector2(-8.00019, 38.9996)
points = PackedVector2Array(0, 0, -40, 0)
width = 2.0
default_color = Color(1, 0, 0, 1)
texture = SubResource("CanvasTexture_1ow8i")

[node name="SpikeDetection" type="ShapeCast2D" parent="Enemy_Sprite"]
visible = false
position = Vector2(0, -125)
scale = Vector2(12.5, 12.5)
shape = SubResource("RectangleShape2D_4a6nf")
target_position = Vector2(0, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, -5)
shape = SubResource("RectangleShape2D_dawp4")

[node name="Mortality" type="Node" parent="."]
script = ExtResource("4_gfvvv")
